--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
+    "dev": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.1",
